--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -39,13 +39,20 @@
     color: #fff;
   }
   
-  /* LOGO */
+  /* LOGO AND LOGO NAME*/
   .logo {
-    font-size: 30px;
+    font-size: 35px;
     padding-left: 15px;
     padding-top: 10px;
     padding-bottom: 10px;
+    }
+  .logoname {
+    margin-left: 30px;
+    padding-top: 12%;
+    padding-bottom: 10%;
+    float: right;
   }
+
   
   /* NAVBAR MENU */
   .menu {
@@ -245,6 +252,8 @@ input[type=checkbox] {
 .searchbar {
   overflow: hidden;
   margin-left: 15px;
+  text-align: center;
+  padding-top: 4%;
 }
 
 .searchbar a {
@@ -315,6 +324,9 @@ input[type=checkbox] {
   min-width: 400px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
   float: left;
+  /* width:70%; */ 
+  margin-left:15%; 
+  margin-right:15%;
 }
 
 .table_style thead tr {
@@ -418,7 +430,7 @@ input[type=checkbox] {
 
 
   /*  Insert Page Css  */
-  * {
+  .container {
     box-sizing: border-box;
   }
   
@@ -462,7 +474,7 @@ input[type=checkbox] {
   }
   
   .col-75 {
-    float: left;
+    float: right;
     width: 75%;
     margin-top: 6px;
   }
@@ -495,3 +507,39 @@ input[type=checkbox] {
   }
 
 
+/*  Home page text */
+
+.homepage_text{
+  margin-right: 9%;
+  margin-left:9%;
+}
+.textimg {
+  display: flex;
+  align-items: center;
+}
+
+.homepage_text h1{
+  margin-top: 2%;
+  margin-bottom: 2%;
+  text-align: center;
+  font-size: 250%;
+}
+
+.text {
+  text-align:justify;
+  margin-right: 5%;
+  margin-left: 5%;
+  font-size: 125%;
+  float: left;
+}
+
+.img {
+  float: right; 
+  /*object-position: center top;*/
+}
+@media (max-width: 767px) {
+  .text, .img {
+    float: none;
+    width: 100%;
+  }
+}
